--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,12 @@
       "32": "Chapter_24_32.png"
     }
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
   "permissions": [
       "tabs",
       "storage",
