adding help hover bars and the help text

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
-  "name": "CeeP",
+  "name": "CoPeee",
   "version": "2.0",
   "manifest_version": 3,
-  "description": "This is CeeP",
+  "description": "This is CoPeee",
   "commands": {
     "command2": {
       "suggested_key": "Ctrl+Shift+2",
