--- a/manifest.json
+++ b/manifest.json
@@ -43,12 +43,7 @@
   ],
   "permissions": [
       "tabs",
-      "storage",
-      "activeTab",
-      "scripting",
-      "clipboard-read",
-      "clipboard-write",
-      "clipboard"
+      "storage"
   ]
 }
 
